--- a/src/styles/pokemonDetails/statsRow.module.css
+++ b/src/styles/pokemonDetails/statsRow.module.css
@@ -9,6 +9,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .containerInner {
